--- a/pom.xml
+++ b/pom.xml
@@ -735,6 +735,11 @@
               <!-- To avoid conflicts on CI server - PAR-192 -->
               <!-- There is an incompatibility with Byteman - used in social -->
               <!-- <java.io.tmpdir>${project.build.directory}</java.io.tmpdir> -->
+              <!-- PAR-226 : Generate tests data inside target dir -->
+              <com.arjuna.ats.arjuna.objectstore.objectStoreDir>${project.build.directory}</com.arjuna.ats.arjuna.objectstore.objectStoreDir>
+              <ObjectStoreEnvironmentBean.objectStoreDir>${project.build.directory}</ObjectStoreEnvironmentBean.objectStoreDir>
+              <gatein.test.tmp.dir>${project.build.directory}</gatein.test.tmp.dir>
+              <gatein.test.output.path>${project.build.directory}</gatein.test.output.path>
             </systemPropertyVariables>
           </configuration>
         </plugin>
