--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
   </organization>
   <licenses>
     <license>
-      <name>GNU Affero General Public License, Version 3.0</name>
-      <url>http://www.gnu.org/licenses/agpl-3.0.txt</url>
+      <name>GNU Lesser General Public License, Version 3.0</name>
+      <url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
