--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (C) 2003-2012 eXo Platform SAS.
+    Copyright (C) 2003-2013 eXo Platform SAS.
 
-    This program is free software; you can redistribute it and/or
-    modify it under the terms of the GNU Affero General Public License
-    as published by the Free Software Foundation; either version 3
-    of the License, or (at your option) any later version.
+    This is free software; you can redistribute it and/or modify it
+    under the terms of the GNU Lesser General Public License as
+    published by the Free Software Foundation; either version 3 of
+    the License, or (at your option) any later version.
 
-    This program is distributed in the hope that it will be useful,
+    This software is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+    Lesser General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
-    along with this program; if not, see <http://www.gnu.org/licenses />.
+    You should have received a copy of the GNU Lesser General Public
+    License along with this software; if not, write to the Free
+    Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+    02110-1301 USA, or see the FSF site: http://www.fsf.org.
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -26,6 +28,7 @@
   <name>eXo parent POM</name>
   <description>Provides default project configuration for eXo projects</description>
   <url>${site.url}</url>
+  <inceptionYear>2003</inceptionYear>
   <organization>
     <name>eXo Platform SAS</name>
     <url>http://www.exoplatform.com</url>
@@ -145,6 +148,7 @@
     <version.jodconverter.plugin>2.2.1</version.jodconverter.plugin>
     <version.jxr.plugin>2.3</version.jxr.plugin>
     <version.lesscss.plugin>1.3.0</version.lesscss.plugin>
+    <version.license.plugin>1.9.0</version.license.plugin>
     <version.project-info-reports.plugin>2.6</version.project-info-reports.plugin>
     <version.plexus.plugin>1.3.8</version.plexus.plugin>
     <version.plugin.plugin>3.2</version.plugin.plugin>
@@ -174,6 +178,8 @@
     <version.plexus-utils>3.0.8</version.plexus-utils>
     <!-- PAR-155 : Produce project sources package distribution -->
     <version.apache-source-release-assembly-descriptor>1.0.4</version.apache-source-release-assembly-descriptor>
+    <!-- PAR-92 : Bundle used to manage file headers -->
+    <version.exo-lgpl-license-resource-bundle>1-SNAPSHOT</version.exo-lgpl-license-resource-bundle>
     <!-- ************** -->
     <!-- Build settings -->
     <!-- ************** -->
@@ -477,7 +483,7 @@
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>gwt-maven-plugin</artifactId>
           <version>${version.gwt.plugin}</version>
-          <configuration> 
+          <configuration>
             <!-- PAR-218 : Can't disable these unneeded artifacts, so compile them outside of the target WAR -->
             <deploy>${project.build.directory}/gwt-deploy</deploy>
           </configuration>
@@ -606,6 +612,119 @@
           <version>${version.lesscss.plugin}</version>
         </plugin>
         <plugin>
+          <groupId>com.mycila.maven-license-plugin</groupId>
+          <artifactId>maven-license-plugin</artifactId>
+          <version>${version.license.plugin}</version>
+          <!-- Add a dependency since this is where the maven-license-plugin plugin will find the license-header.txt file -->
+          <dependencies>
+            <dependency>
+              <groupId>org.exoplatform.resources</groupId>
+              <artifactId>exo-lgpl-license-resource-bundle</artifactId>
+              <version>${version.exo-lgpl-license-resource-bundle}</version>
+            </dependency>
+          </dependencies>
+          <configuration>
+            <header>license-header.txt</header>
+            <properties>
+              <!-- Values to be substituted in template -->
+              <h_inceptionYear>${project.inceptionYear}</h_inceptionYear>
+              <h_currentYear>${currentYear}</h_currentYear>
+              <h_copyrightOwner>${project.organization.name}</h_copyrightOwner>
+            </properties>
+            <failIfMissing>false</failIfMissing>
+            <strictCheck>true</strictCheck>
+            <!-- Our Java isn't the default so we need to change the mapping -->
+            <mapping>
+              <java>SLASHSTAR_STYLE</java>
+            </mapping>
+            <!-- We're only interested in checking our sources and our POMs -->
+            <includes>
+              <include>src/**</include>
+              <include>pom.xml</include>
+            </includes>
+            <!-- Default excludes are excluding POMs -->
+            <useDefaultExcludes>false</useDefaultExcludes>
+            <excludes>
+              <exclude>**/*~</exclude>
+              <exclude>**/#*#</exclude>
+              <exclude>**/.#*</exclude>
+              <exclude>**/%*%</exclude>
+              <exclude>**/._*</exclude>
+              <exclude>**/.repository/**</exclude>
+              <exclude>**/CVS</exclude>
+              <exclude>**/CVS/**</exclude>
+              <exclude>**/.cvsignore</exclude>
+              <exclude>**/RCS</exclude>
+              <exclude>**/RCS/**</exclude>
+              <exclude>**/SCCS</exclude>
+              <exclude>**/SCCS/**</exclude>
+              <exclude>**/vssver.scc</exclude>
+              <exclude>**/.svn</exclude>
+              <exclude>**/.svn/**</exclude>
+              <exclude>**/.arch-ids</exclude>
+              <exclude>**/.arch-ids/**</exclude>
+              <exclude>**/.bzr</exclude>
+              <exclude>**/.bzr/**</exclude>
+              <exclude>**/.MySCMServerInfo</exclude>
+              <exclude>**/.DS_Store</exclude>
+              <exclude>**/.metadata</exclude>
+              <exclude>**/.metadata/**</exclude>
+              <exclude>**/.hg</exclude>
+              <exclude>**/.hg/**</exclude>
+              <exclude>**/.git</exclude>
+              <exclude>**/.git/**</exclude>
+              <exclude>**/.gitignore</exclude>
+              <exclude>**/BitKeeper</exclude>
+              <exclude>**/BitKeeper/**</exclude>
+              <exclude>**/ChangeSet</exclude>
+              <exclude>**/ChangeSet/**</exclude>
+              <exclude>**/_darcs</exclude>
+              <exclude>**/_darcs/**</exclude>
+              <exclude>**/.darcsrepo</exclude>
+              <exclude>**/.darcsrepo/**</exclude>
+              <exclude>**/-darcs-backup*</exclude>
+              <exclude>**/.darcs-temp-mail</exclude>
+              <exclude>**/target/**</exclude>
+              <exclude>**/test-output/**</exclude>
+              <exclude>**/release.properties</exclude>
+              <exclude>**/dependency-reduced-pom.xml</exclude>
+              <exclude>**/cobertura.ser</exclude>
+              <exclude>**/.clover/**</exclude>
+              <exclude>**/.classpath</exclude>
+              <exclude>**/.project</exclude>
+              <exclude>**/.settings/**</exclude>
+              <exclude>**/*.iml</exclude>
+              <exclude>**/*.ipr</exclude>
+              <exclude>**/*.iws</exclude>
+              <exclude>**/.idea/**</exclude>
+              <exclude>**/MANIFEST.MF</exclude>
+              <exclude>**/*.jpg</exclude>
+              <exclude>**/*.png</exclude>
+              <exclude>**/*.gif</exclude>
+              <exclude>**/*.ico</exclude>
+              <exclude>**/*.bmp</exclude>
+              <exclude>**/*.tiff</exclude>
+              <exclude>**/*.tif</exclude>
+              <exclude>**/*.cr2</exclude>
+              <exclude>**/*.xcf</exclude>
+              <exclude>**/*.class</exclude>
+              <exclude>**/*.exe</exclude>
+              <exclude>**/*.md5</exclude>
+              <exclude>**/*.sha1</exclude>
+              <exclude>**/*.jar</exclude>
+              <exclude>**/*.zip</exclude>
+              <exclude>**/*.rar</exclude>
+              <exclude>**/*.tar</exclude>
+              <exclude>**/*.tar.gz</exclude>
+              <exclude>**/*.tar.bz2</exclude>
+              <exclude>**/*.gz</exclude>
+              <exclude>**/*.xls</exclude>
+              <exclude>**/META-INF/services/**</exclude>
+              <exclude>**/*.pem</exclude>
+            </excludes>
+          </configuration>
+        </plugin>
+        <plugin>
           <groupId>org.codehaus.plexus</groupId>
           <artifactId>plexus-maven-plugin</artifactId>
           <version>${version.plexus.plugin}</version>
@@ -700,6 +819,9 @@
           <groupId>com.google.code.sortpom</groupId>
           <artifactId>maven-sortpom-plugin</artifactId>
           <version>${version.sortpom.plugin}</version>
+          <configuration>
+            <expandEmptyElements>false</expandEmptyElements>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -1154,6 +1276,45 @@
               </validationSets>
             </configuration>
           </plugin>
+          <!-- Creating current year element -->
+          <plugin>
+            <groupId>org.codehaus.gmaven</groupId>
+            <artifactId>gmaven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>compute-year</id>
+                <phase>validate</phase>
+                <goals>
+                  <goal>execute</goal>
+                </goals>
+                <configuration>
+                  <source>project.properties['currentYear'] = Year.compute()</source>
+                </configuration>
+              </execution>
+            </executions>
+            <!-- Add a dependency since to find the year.groovy file -->
+            <dependencies>
+              <dependency>
+                <groupId>org.exoplatform.resources</groupId>
+                <artifactId>exo-lgpl-license-resource-bundle</artifactId>
+                <version>${version.exo-lgpl-license-resource-bundle}</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+          <!-- Adding header to file -->
+          <plugin>
+            <groupId>com.mycila.maven-license-plugin</groupId>
+            <artifactId>maven-license-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>check-headers</id>
+                <phase>validate</phase>
+                <goals>
+                  <goal>check</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
         </plugins>
       </build>
       <properties>
@@ -1314,6 +1475,100 @@
               </execution>
             </executions>
             <inherited>false</inherited>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>fix-headers</id>
+      <build>
+        <defaultGoal>validate</defaultGoal>
+        <plugins>
+          <!-- Creating current year element -->
+          <plugin>
+            <groupId>org.codehaus.gmaven</groupId>
+            <artifactId>gmaven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>compute-year</id>
+                <phase>validate</phase>
+                <goals>
+                  <goal>execute</goal>
+                </goals>
+                <configuration>
+                  <source>project.properties['currentYear'] = Year.compute()</source>
+                </configuration>
+              </execution>
+            </executions>
+            <!-- Add a dependency since to find the year.groovy file -->
+            <dependencies>
+              <dependency>
+                <groupId>org.exoplatform.resources</groupId>
+                <artifactId>exo-lgpl-license-resource-bundle</artifactId>
+                <version>${version.exo-lgpl-license-resource-bundle}</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+          <!-- Adding header to file -->
+          <plugin>
+            <groupId>com.mycila.maven-license-plugin</groupId>
+            <artifactId>maven-license-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>format-headers</id>
+                <phase>validate</phase>
+                <goals>
+                  <goal>format</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>check-headers</id>
+      <build>
+        <defaultGoal>validate</defaultGoal>
+        <plugins>
+          <!-- Creating current year element -->
+          <plugin>
+            <groupId>org.codehaus.gmaven</groupId>
+            <artifactId>gmaven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>compute-year</id>
+                <phase>validate</phase>
+                <goals>
+                  <goal>execute</goal>
+                </goals>
+                <configuration>
+                  <source>project.properties['currentYear'] = Year.compute()</source>
+                </configuration>
+              </execution>
+            </executions>
+            <!-- Add a dependency since to find the year.groovy file -->
+            <dependencies>
+              <dependency>
+                <groupId>org.exoplatform.resources</groupId>
+                <artifactId>exo-lgpl-license-resource-bundle</artifactId>
+                <version>${version.exo-lgpl-license-resource-bundle}</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+          <!-- Adding header to file -->
+          <plugin>
+            <groupId>com.mycila.maven-license-plugin</groupId>
+            <artifactId>maven-license-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>check-headers</id>
+                <phase>validate</phase>
+                <goals>
+                  <goal>check</goal>
+                </goals>
+              </execution>
+            </executions>
           </plugin>
         </plugins>
       </build>
