--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,7 @@
     <version.jmeter.plugin>1.8.0</version.jmeter.plugin>
     <version.jodconverter.plugin>2.2.1</version.jodconverter.plugin>
     <version.jxr.plugin>2.3</version.jxr.plugin>
+		<!-- PAR-213 : Downgrade to lesscss 1.3.0. platformui doesn't build with 1.3.3 -->
     <version.lesscss.plugin>1.3.0</version.lesscss.plugin>
     <version.license.plugin>1.9.0</version.license.plugin>
     <version.project-info-reports.plugin>2.6</version.project-info-reports.plugin>
