TEMPORARILY ALLOW SNAPSHOTs of plugins
PAR-244 : Upgrade org.apache.maven.plugins:maven-project-info-reports-plugin 2.6 -> 2.7-SNAPSHOT
PAR-243 : pluginManagement : Upgrade org.apache.maven.plugins:maven-dependency-plugin 2.7 -> 2.8-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -1187,7 +1187,7 @@
                       <message>Best practice is to always define plugin versions! Plugins must be released released (no SNAPSHOT) and without using keywords RELEASE or LATEST!</message>
                       <banLatest>true</banLatest>
                       <banRelease>true</banRelease>
-                      <banSnapshots>true</banSnapshots>
+                      <banSnapshots>false</banSnapshots>
                       <phases>deploy,site</phases>
                     </requirePluginVersions>
                   </rules>
