--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,8 @@
     <extra-enforcer-rules.version>1.0-alpha-4</extra-enforcer-rules.version>
     <!-- The version of maven-scm-provider-svnjava to use -->
     <maven-scm-provider-svnjava.version>2.0.5</maven-scm-provider-svnjava.version>
+    <!-- gmaven-plugin -->
+    <gmaven-plugin.providerSelection>2.0</gmaven-plugin.providerSelection>
     <!-- maven-gpg-plugin -->
     <gpg.useagent>true</gpg.useagent>
     <!-- maven-gwt-plugin -->
@@ -485,6 +487,9 @@
           <groupId>org.codehaus.gmaven</groupId>
           <artifactId>gmaven-plugin</artifactId>
           <version>${version.gmaven.plugin}</version>
+          <configuration>
+            <providerSelection>${gmaven-plugin.providerSelection}</providerSelection>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
