--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,7 @@
     <version.jxr.plugin>2.3</version.jxr.plugin>
     <version.lesscss.plugin>1.3.3</version.lesscss.plugin>
     <version.license.plugin>1.9.0</version.license.plugin>
-    <version.project-info-reports.plugin>2.7-SNAPSHOT</version.project-info-reports.plugin>
+    <version.project-info-reports.plugin>2.7</version.project-info-reports.plugin>
     <version.plexus.plugin>1.3.8</version.plexus.plugin>
     <version.plugin.plugin>3.2</version.plugin.plugin>
     <version.pmd.plugin>3.0.1</version.pmd.plugin>
