--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,7 @@
     <version.jxr.plugin>2.3</version.jxr.plugin>
     <version.lesscss.plugin>1.3.3</version.lesscss.plugin>
     <version.license.plugin>1.5</version.license.plugin>
-    <version.mycila-license.plugin>1.9.0</version.mycila-license.plugin>
+    <version.mycila-license.plugin>2.5</version.mycila-license.plugin>
     <version.project-info-reports.plugin>2.7</version.project-info-reports.plugin>
     <version.plexus.plugin>1.3.8</version.plexus.plugin>
     <version.plugin.plugin>3.2</version.plugin.plugin>
@@ -652,8 +652,8 @@
         </plugin>
         <!-- It should be merged in the mojo plugin -->
         <plugin>
-          <groupId>com.mycila.maven-license-plugin</groupId>
-          <artifactId>maven-license-plugin</artifactId>
+          <groupId>com.mycila</groupId>
+          <artifactId>license-maven-plugin</artifactId>
           <version>${version.mycila-license.plugin}</version>
           <!-- Add a dependency since this is where the maven-license-plugin plugin will find the license-header.txt file -->
           <dependencies>
@@ -1341,8 +1341,8 @@
           </plugin>
           <!-- Adding header to file -->
           <plugin>
-            <groupId>com.mycila.maven-license-plugin</groupId>
-            <artifactId>maven-license-plugin</artifactId>
+            <groupId>com.mycila</groupId>
+            <artifactId>license-maven-plugin</artifactId>
             <executions>
               <execution>
                 <id>check-headers</id>
@@ -1549,8 +1549,8 @@
           </plugin>
           <!-- Adding header to file -->
           <plugin>
-            <groupId>com.mycila.maven-license-plugin</groupId>
-            <artifactId>maven-license-plugin</artifactId>
+            <groupId>com.mycila</groupId>
+            <artifactId>license-maven-plugin</artifactId>
             <executions>
               <execution>
                 <id>format-headers</id>
@@ -1596,8 +1596,8 @@
           </plugin>
           <!-- Adding header to file -->
           <plugin>
-            <groupId>com.mycila.maven-license-plugin</groupId>
-            <artifactId>maven-license-plugin</artifactId>
+            <groupId>com.mycila</groupId>
+            <artifactId>license-maven-plugin</artifactId>
             <executions>
               <execution>
                 <id>check-headers</id>
