--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,7 @@
     <version.source.plugin>2.2.1</version.source.plugin>
     <version.surefire.plugin>2.16</version.surefire.plugin>
     <version.taglist.plugin>2.4</version.taglist.plugin>
+    <version.tomcat7.plugin>2.1</version.tomcat7.plugin>
     <version.versions.plugin>2.1</version.versions.plugin>
     <version.war.plugin>2.4</version.war.plugin>
     <version.wikbook.plugin>0.9.45</version.wikbook.plugin>
@@ -914,6 +915,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-report-plugin</artifactId>
           <version>${version.surefire.plugin}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.tomcat.maven</groupId>
+          <artifactId>tomcat7-maven-plugin</artifactId>
+          <version>${version.tomcat7.plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
