PAR-271 : Upload artifacts using HTTPS instead of webdav

--- a/pom.xml
+++ b/pom.xml
@@ -91,8 +91,8 @@
     <!-- Repositories URLs                        -->
     <!-- Using DAV for large artifacts - PAR-156  -->
     <!-- **************************************** -->
-    <exo.releases.repo.url>dav:http://repository.exoplatform.org/service/local/staging/deploy/maven2/</exo.releases.repo.url>
-    <exo.snapshots.repo.url>dav:http://repository.exoplatform.org/content/repositories/exo-snapshots</exo.snapshots.repo.url>
+    <exo.releases.repo.url>https://repository.exoplatform.org/service/local/staging/deploy/maven2/</exo.releases.repo.url>
+    <exo.snapshots.repo.url>https://repository.exoplatform.org/content/repositories/exo-snapshots</exo.snapshots.repo.url>
     <exo.public.repo.url>http://repository.exoplatform.org/public/</exo.public.repo.url>
     <!-- **************************************** -->
     <!-- Site URL                                 -->
@@ -245,7 +245,8 @@
       <extension>
         <groupId>org.apache.maven.wagon</groupId>
         <artifactId>wagon-webdav-jackrabbit</artifactId>
-        <version>${version.wagon}</version>
+        <!-- 2.5 doesn't work : java.lang.ClassNotFoundException: org.apache.commons.logging.LogFactory -->
+        <version>2.4</version>
       </extension>
       <extension>
         <groupId>org.apache.maven.wagon</groupId>
