PAR-316 : Ensure the project sources package always use the classifier source-release

--- a/pom.xml
+++ b/pom.xml
@@ -1262,6 +1262,7 @@
                     <descriptorRef>source-release</descriptorRef>
                   </descriptorRefs>
                   <tarLongFileMode>gnu</tarLongFileMode>
+                  <appendAssemblyId>true</appendAssemblyId>
                 </configuration>
               </execution>
             </executions>
