--- a/pom.xml
+++ b/pom.xml
@@ -258,14 +258,10 @@
             <jacoco.outputDir>${session.executionRootDirectory}/target/</jacoco.outputDir>
     -->
     <jacoco.outputDir>${project.build.directory}</jacoco.outputDir>
-    <!-- Jacoco output file for UTs -->
-    <jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>
     <!-- Tells Sonar where the Jacoco coverage result file is located for Unit Tests -->
-    <sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPath>
-    <!-- Jacoco output file for ITs -->
-    <jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
+    <sonar.jacoco.reportPath>${jacoco.outputDir}/jacoco.exec</sonar.jacoco.reportPath>
     <!-- Tells Sonar where the Jacoco coverage result file is located for Integration Tests -->
-    <sonar.jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPath>
+    <sonar.jacoco.itReportPath>${jacoco.outputDir}/jacoco-it.exec</sonar.jacoco.itReportPath>
   </properties>
   <build>
     <extensions>
@@ -559,6 +555,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-invoker-plugin</artifactId>
           <version>${version.invoker.plugin}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>${version.jacoco.plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -1107,6 +1108,11 @@
         <artifactId>maven-report</artifactId>
         <version>${version.sonar-maven-report.plugin}</version>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>${version.surefire.plugin}</version>
+      </plugin>
     </plugins>
   </reporting>
   <profiles>
@@ -1436,7 +1442,6 @@
             <executions>
               <execution>
                 <id>prepare-ut-agent</id>
-                <phase>process-test-classes</phase>
                 <goals>
                   <goal>prepare-agent</goal>
                 </goals>
@@ -1445,13 +1450,10 @@
                   <append>true</append>
                 </configuration>
               </execution>
-              <!-- Prepares a variable, jacoco.agent.it.arg, that contains the info to be passed to the JVM hosting the code
-                   being tested. -->
               <execution>
                 <id>prepare-it-agent</id>
-                <phase>pre-integration-test</phase>
                 <goals>
-                  <goal>prepare-agent</goal>
+                  <goal>prepare-agent-integration</goal>
                 </goals>
                 <configuration>
                   <destFile>${sonar.jacoco.itReportPath}</destFile>
@@ -1470,6 +1472,35 @@
           <scope>test</scope>
         </dependency>
       </dependencies>
+      <reporting>
+        <plugins>
+          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>${version.jacoco.plugin}</version>
+            <reportSets>
+              <reportSet>
+                <id>default-report</id>
+                <reports>
+                  <report>report</report>
+                </reports>
+                <configuration>
+                  <dataFile>${sonar.jacoco.reportPath}</dataFile>
+                </configuration>
+              </reportSet>
+              <reportSet>
+                <id>default-report-integration</id>
+                <reports>
+                  <report>report-integration</report>
+                </reports>
+                <configuration>
+                  <dataFile>${sonar.jacoco.itReportPath}</dataFile>
+                </configuration>
+              </reportSet>
+            </reportSets>
+          </plugin>
+        </plugins>
+      </reporting>
     </profile>
     <!--
      Checks backward compatibility is maintained
