PAR-318 - pluginManagement : Add org.codehaus.gmavenplus:gmavenplus-plugin:1.2

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,7 @@
     <version.failsafe.plugin>${version.surefire.plugin}</version.failsafe.plugin>
     <version.findbugs.plugin>2.5.4</version.findbugs.plugin>
     <version.gmaven.plugin>1.5</version.gmaven.plugin>
+    <version.gmavenplus.plugin>1.2</version.gmavenplus.plugin>
     <version.gpg.plugin>1.5</version.gpg.plugin>
     <!-- Must be kept in sync with maven-depmgt-pom GWT version -->
     <version.gwt.plugin>2.5.1</version.gwt.plugin>
@@ -521,6 +522,14 @@
           <version>${version.gmaven.plugin}</version>
           <configuration>
             <providerSelection>${gmaven-plugin.providerSelection}</providerSelection>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.gmavenplus</groupId>
+          <artifactId>gmavenplus-plugin</artifactId>
+          <version>${version.gmavenplus.plugin}</version>
+          <configuration>
+            <targetBytecode>${maven.compiler.target}</targetBytecode>
           </configuration>
         </plugin>
         <plugin>
